<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CromaNews!</string>
    <string name="app_name">BCN News</string>
    <string name="url_signup">http://bcn.guegue.info/signup.php</string>
    <string name="url_feedback">http://bcn.guegue.info/feedback.php</string>
    <string name="url_feed">http://bcn.guegue.info/atom</string>
    <string name="feed_warp">http://bcn.guegue.info/atom</string>
    <string name="feed_prensa">http://bcn.guegue.info/atom</string>
    <string name="indicador">Indicador</string>
    <string name="valor">Valor</string>
    <string name="fecha">Fecha</string>
    <color name="orange">#ff9900</color>
  	<string name="menu_principal">Página Principal</string>
  	<string name="menu_compartir">Compartir</string>
  	<string name="menu_tweet">Compartir en Twitter</string>
  	<string name="menu_face">Compartir en Facebook</string>
  	<string name="menu_mail">Enviar por correo electrónico</string>
    <string name="menu_cerrar">Cerrar</string>
    <string name="back">Regresar</string>
    <string name="dialog_downloading">Descargando. Espere un momento.</string>
    <string name="dialog_updating">La información se está actualizando. Espere un momento</string>
    <string name="dialog_error">Ha ocurrido un error. Verifique su conexión en intente de nuevo</string>
    <string name="registry_welcome">Bienvenido a Noticias BCN. Para empezar a utilizar esta aplicación llene el siguiente registro. Sólo tendrá que llenarlo una vez.</string>
    <string name="registry_name">Nombre</string>
    <string name="registry_invalid_name">No ha introducido su nombre</string>
    <string name="registry_mail">Correo electrónico</string>
    <string name="registry_invalid_mail">No ha introducido un correo electrónico válido</string>
    <string name="registry_register">Enviar</string>
    <string name="registry_dontreg">No deseo registrarme</string>
    <string name="registry_wait">Un momento por favor</string>
    <string name="registry_fail">El registro ha fallado, se requerirá que lo realice la próxima vez que utilice la aplicación.</string>
    <string name="feedback_welcome">Permitanos saber que le ha parecido la aplicación para tenerlo en cuenta en nuestras futuras versiones</string>
    <string name="feedback_do">Opinar</string>
    <string name="feedback_dont">No deseo opinar</string>
    <string name="feedback_message">Mensaje</string>
    <string name="feedback_country">País</string>
    <string name="feedback_invalid_country">Debe escribir su pais</string>
    <string name="feedback_invalid_message">Debe escribir algun comentario</string>
    <string name="share_subject">Asunto</string>
    <string name="share_title">Título</string>
    <string name="share_subject_suggestion">Nota del Banco Central de Nicaragua</string>
    <string name="share_not_yet_auth">Aún no ha otorgado el permiso para que esta aplicación publique en su cuenta. </string>
    <string name="share_authorize">Autorizar a la aplicación publicar en mi cuenta</string> 
    <string name="share_pin">Escriba el PIN</string>
    <string name="share_once_auth">Una vez que haya otorgado el permiso, escriba el PIN y dé click en el botón para enviar.</string>
  	<string name="share_username">Nombre de Usuario</string>
  	<string name="share_psw">Contraseña</string>
  	<string name="share_message">Mensaje personal</string>
  	<string name="share_link_to_note_included">La liga a la nota será incluida automáticamente</string>
  	<string name="share_published">La nota ha sido publicada</string>
  	<string name="share_not_published">Ha ocurrido un error, no se ha publicado la nota</string>
  	<string name="share_submit">Enviar</string>
  	<string name="share_wrong_id">Nombre de usuario o contraseña erróneo.</string>
  	<string name="share_logout">Su sesión se encuentra activa, haga click aquí para cerrarla.</string>
</resources>
